--- a/src/style.css
+++ b/src/style.css
@@ -550,6 +550,11 @@ button:focus {
   color: white !important;
 }
 
+.services-section{
+  background-image: var(--section-background-color) !important;
+  color: white !important;
+}
+
 .tech-icons {
   font-size: 4.5em !important;
   margin: 15px !important;
