--- a/src/components/Services/service.css
+++ b/src/components/Services/service.css
@@ -3,6 +3,14 @@ body {
   padding: 0;
   justify-content: center;
 }
+
+.services-section{
+  position: relative !important;
+  padding-top: 100px !important;
+  padding-bottom: 30px !important;
+  
+}
+
 body .container2 {
   max-width: 100vw;
   display: grid;
